<resources>
    <string name="app_name">avtoqaraj_user_app</string>
    <string name="home">Home</string>
    <string name="shop">Shop</string>
    <string name="garage">Garage</string>
    <string name="notification">Notification</string>
    <string name="profile">Profile</string>
    <string name="search">Axtar</string>
    <string name="categories">Categories</string>
    <string name="seeAll">See all</string>
    <string name="detailType">İnteryer aksessuarları</string>
    <string name="allBrands">All brands</string>
    <string name="orderPart">Ehtiyat hissəsi sifariş et</string>
    <string name="orderHelp">Biz sizin üçün tapmağa kömək\nedirik</string>
    <string name="store">Mağaza açmaq istəyirsiniz?</string>
    <string name="applicationform">Müraciət formunu doldurun</string>
    <string name="interioraccessoriesname">Speedometers</string>
    <string name="individiualDetailName">Fara</string>
    <string name="individiualPrice">974.83AZN</string>
    <string name="realPrice">698.19AZN</string>
    <string name="mark">Marka</string>
    <string name="model">Model</string>
    <string name="releaseYear">Buraxılış ili</string>
    <string name="VinNumber">Vin Kod</string>
    <string name="spareName">Ehtiyyat hissəsinin adı</string>
    <string name="unavailable">Yoxdur</string>
    <string name="descriptionProduct">Məhsulun təsviri</string>
    <string name="personName">Adınız</string>
    <string name="email">E-mail</string>
    <string name="phone">Telefon</string>
    <string name="save">Yadda saxla</string>
    <string name="storeName">Mağazanın adı</string>
    <string name="storeAddress">Mağazanın ünvanı</string>
    <string name="searchSparePart">Ehtiyyat hissəsi axtar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="officialDealers">Rəsmi dillerlər</string>
    <string name="shopName">Mercedes-Benz Abşeron Avtomobil Mərkəzi</string>
    <string name="shopTime">B.e – C: 09:00–18:00</string>
    <string name="shops">Mağazalar</string>
    <string name="shopStoreName">Avto Med</string>
    <string name="individualannounce">Fərdi elanlar</string>
    <string name="dillerName">Mercedes-Benz Abşeron \nAvtomobil Mərkəzi</string>
    <string name="dillerLoc">Bakı şəh, Babək pr., 35A</string>
    <string name="dillertime">B.e – C:  09:00–18:00   Ş:  10:00 – 17:00</string>
    <string name="dillersite"><u>www.volkswagen.az</u></string>
    <string name="storelistName">AVTOPLANET</string>
    <string name="productcount">211 Məhsul</string>
    <string name="carMark">AVENTADOR</string>
    <string name="CarStyle">c219 [restyling] [2008–2010]</string>
    <string name="addNewMark">Yeni marka əlavə et</string>
    <string name="motorcycle">Motosikl</string>
    <string name="ban">Ban</string>
    <string name="motor">Mühərrik</string>
    <string name="add">Əlavə et</string>
    <string name="profileName">Asiman Ismayilova</string>
    <string name="profileMail">aismayilova@netgroup.az</string>
    <string name="allprod">Bütün məhsullar</string>
    <string name="chosenprod">Seçilmiş məhsullar</string>
    <string name="exit">Çıxış</string>
    <string name="updatephoto">Fotonuzu yeniləyin</string>
    <string name="fullname">Tam adı</string>
    <string name="name">Name</string>
    <string name="changepass">Şifrəni dəyiş</string>
    <string name="oldpass">Old password</string>
    <string name="newPass">New password</string>
    <string name="newpassR">New Password(Repeat)</string>
    <string name="accesType">Category- Eksteryer aksessuarlar</string>
    <string name="accesName">Asqı qolu vtulkası ön alt Porsche \nPanamera 970</string>
    <string name="delivertime">(10 days)</string>
    <string name="waiting">Təsdiq gözləyən</string>
    <string name="mercyMark"><b>AMG GT S</b></string>
    <string name="engine">Engine</string>
    <string name="enginetypo">3.0 turbo</string>
    <string name="power">Power</string>
    <string name="powerTypo">550 a.g</string>
    <string name="transmission">Transmission</string>
    <string name="tranmisTypo">Automatic</string>
    <string name="bodytypo">Body type</string>
    <string name="coupe">Coupe</string>
    <string name="message">Mesaj</string>
    <string name="hub">Stupitsa ön Toyota Prius</string>
    <string name="autoparts">Avtotəmir hissələri</string>
    <string name="productNumber">Məhsulun nömrəsi:\n116846</string>
    <string name="addingdate">Yerləşmə tarixi:\n21–09–2020</string>
    <string name="ToyotaPrius">Toyota Pirus(2008) Stupisya paceniki\nKod 43510-47010\nBasqa masinlarada var buyrub elaqe saxliya bilersiz.\n\nEhtiyat hissəsinin kodu:\n43510-47010</string>
    <string name="suitablecars">Uyğun avtomobillərin siyahisi</string>
    <string name="carGeneration">Toyota /Prius /2 generation [2003-2011]\n\nEhtiyat hissəsinin kodu:\n43510-47010</string>
    <string name="call">Call</string>
    <string name="category">Kateqoriya</string>
    <string name="productname">Məhsulun adı</string>
    <string name="price">Qiymət (AZN)</string>
    <string name="vehicletype">Nəqliyyat növü</string>
    <string name="urname">Adınız</string>
    <string name="series">AMG GT S</string>
    <string name="report">Hesabat</string>
    <string name="seAll">Hamısına bax</string>


</resources>