<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_home"
        android:enabled="true"
        android:icon="@drawable/home"
        android:title="@string/home" />

    <item
        android:id="@+id/action_shop"
        android:enabled="true"
        android:icon="@drawable/shop"
        android:title="@string/shop"/>

    <item
        android:id="@+id/action_garage"
        android:enabled="true"
        android:icon="@drawable/garage"
        android:title="@string/garage" />

    <item
        android:id="@+id/action_notify"
        android:enabled="true"
        android:icon="@drawable/notification"
        android:title="@string/notification"
        />

    <item
        android:id="@+id/action_profile"
        android:enabled="true"
        android:icon="@drawable/profile"
        android:title="@string/profile"/>


</menu>