<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    tools:context=".ui.garage.specificCar.SpecificCar">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:backgroundTint="@color/white"
            android:elevation="4dp"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewpagerGarage"
            android:layout_width="0dp"
            android:layout_height="190dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <me.relex.circleindicator.CircleIndicator3
            android:id="@+id/indicator"
            app:ci_drawable="@drawable/sel_indicator"
            app:ci_drawable_unselected="@drawable/uns_indicator"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewpagerGarage" />

        <ImageView
            android:id="@+id/imageView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="15dp"
            android:src="@drawable/ymerccyy"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/indicator" />

        <TextView
            android:id="@+id/textView55"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="19dp"
            android:fontFamily="@font/lato"
            android:text="@string/series"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintStart_toEndOf="@+id/imageView18"
            app:layout_constraintTop_toBottomOf="@id/indicator" />

        <TextView
            android:id="@+id/textView57"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="1dp"
            android:text="@string/CarStyle"
            android:textColor="@color/realPrice"
            android:textSize="13sp"
            app:layout_constraintStart_toEndOf="@+id/imageView18"
            app:layout_constraintTop_toBottomOf="@+id/textView55" />
        <TextView
            android:id="@+id/textView56"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="22dp"
            android:fontFamily="@font/lato"
            android:text="@string/engine"
            android:textColor="@color/realPrice"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageView18" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/lato"
            android:text="@string/enginetypo"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView56" />

        <View
            android:id="@+id/view16"
            android:layout_width="2dp"
            android:layout_height="64dp"
            android:layout_marginStart="59dp"
            android:layout_marginTop="12dp"
            android:background="@color/lookspink"
            app:layout_constraintStart_toEndOf="@id/textView56"
            app:layout_constraintTop_toBottomOf="@+id/imageView18" />


        <TextView
            android:id="@+id/textView58"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="28dp"
            android:text="@string/power"
            android:textColor="@color/realPrice"
            android:textSize="13sp"
            app:layout_constraintStart_toEndOf="@+id/view16"
            app:layout_constraintTop_toBottomOf="@+id/textView57" />

        <TextView
            android:id="@+id/textView59"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/lato"
            android:text="@string/powerTypo"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/view16"
            app:layout_constraintTop_toBottomOf="@+id/textView58" />

        <View
            android:id="@+id/view17"
            android:layout_width="2dp"
            android:layout_height="64dp"
            android:layout_marginStart="63dp"
            android:layout_marginTop="12dp"
            android:background="@color/lookspink"
            app:layout_constraintStart_toEndOf="@id/textView58"
            app:layout_constraintTop_toBottomOf="@+id/imageView18" />

        <TextView
            android:id="@+id/textView60"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="28dp"
            android:fontFamily="@font/lato"
            android:text="@string/transmission"
            android:textColor="@color/realPrice"
            android:textSize="13sp"
            app:layout_constraintStart_toEndOf="@+id/view17"
            app:layout_constraintTop_toBottomOf="@+id/textView57" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/lato"
            android:text="@string/tranmisTypo"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/view17"
            app:layout_constraintTop_toBottomOf="@+id/textView60" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/searchSpBtn"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:backgroundTint="@color/DefaultColor"
            android:text="@string/searchSparePart"
            android:textAllCaps="false"
            android:textSize="16sp"
            app:cornerRadius="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view16" />

        <TextView
            android:id="@+id/textView61"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/lato"
            android:text="@string/report"
            android:textColor="@color/softblack"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchSpBtn" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/lato"
            android:text="@string/seAll"
            android:textColor="@color/DefaultColor"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchSpBtn" />

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/piechart"
            android:layout_width="232dp"
            android:layout_height="232dp"
            android:layout_marginStart="64dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="64dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView61" />

        




    </androidx.constraintlayout.widget.ConstraintLayout>




</ScrollView>