<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.garage.specificCar.technique.TechIndicators">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView8"
        android:layout_width="match_parent"
        android:layout_height="148dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/ymerccyy"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView34"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/lato"
                android:text="@string/mercyMark"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintStart_toEndOf="@+id/imageView13"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView38"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="1dp"
                android:fontFamily="@font/lato"
                android:text="@string/CarStyle"
                android:textColor="@color/realPrice"
                android:textSize="13sp"
                app:layout_constraintStart_toEndOf="@+id/imageView13"
                app:layout_constraintTop_toBottomOf="@+id/textView34" />

            <TextView
                android:id="@+id/textView35"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="22dp"
                android:fontFamily="@font/lato"
                android:text="@string/engine"
                android:textColor="@color/realPrice"
                android:textSize="13sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView13" />

            <TextView
                android:id="@+id/textView37"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/lato"
                android:text="@string/enginetypo"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView35" />

            <View
                android:id="@+id/view12"
                android:layout_width="2dp"
                android:layout_height="64dp"
                android:layout_marginStart="35dp"
                android:layout_marginTop="12dp"
                android:background="@color/lookspink"
                app:layout_constraintStart_toEndOf="@+id/textView37"
                app:layout_constraintTop_toBottomOf="@+id/imageView13" />

            <TextView
                android:id="@+id/textView39"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/lato"
                android:text="@string/power"
                android:textColor="@color/realPrice"
                android:textSize="13sp"
                app:layout_constraintStart_toEndOf="@+id/view12"
                app:layout_constraintTop_toTopOf="@+id/textView35" />

            <TextView
                android:id="@+id/textView40"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/lato"
                android:text="@string/powerTypo"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/view12"
                app:layout_constraintTop_toTopOf="@+id/textView37" />

            <View
                android:id="@+id/view13"
                android:layout_width="2dp"
                android:layout_height="64dp"
                android:layout_marginStart="49dp"
                android:background="@color/lookspink"
                app:layout_constraintStart_toEndOf="@+id/textView40"
                app:layout_constraintTop_toTopOf="@+id/view12" />

            <TextView
                android:id="@+id/textView41"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/lato"
                android:text="@string/transmission"
                android:textColor="@color/realPrice"
                android:textSize="13sp"
                app:layout_constraintStart_toEndOf="@+id/view13"
                app:layout_constraintTop_toTopOf="@+id/textView39" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/lato"
                android:text="@string/tranmisTypo"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/view13"
                app:layout_constraintTop_toTopOf="@+id/textView40" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycTech"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView8"
        tools:itemCount="1"
        tools:listitem="@layout/list_item_tech"/>

</androidx.constraintlayout.widget.ConstraintLayout>